r10 ====================================================================
- исправлена ошибка в функции grad_values_to_array(), из-за которой
  функция могла возвращать list вместо array

r9 =====================================================================
+ добавлен класс RepeaterGenGradGen

r8 =====================================================================
* значение поля GradSender.DEFAULT_TICK_INTERVAL теперь соответствует
  30 обращениям к устройству в секунду
+ в класс GradPosition добавлены новые методы set_length_from_time()
  и compute_length()

r7 =====================================================================
* изменён класс SineGradGen:
  + теперь он может генерировать более одного канала значений
  + добавлены поля phase (со значениями фазы) и levels (со значениями
    уровней) для отдельных каналов;
  ! для генерации полностью независимых синусоид можно, как и раньше,
    засовывать несколько разных SineGradGen в ParallelGenGradGen
* изменён класс SquareGradGen:
  + добавлены поля phase (со значением фазы) и dutyCycle (со значением
    коэффициента заполнения)
  ! как и в предыдущей версии SquareGradGen генерирует только один
    канал значений

r6 =====================================================================
* изменён класс ImageGradGen:
  - исправлен конструктор: теперь проверяется совместимость формата
    изображения с этим модулем; на данный момент поддерживаются:
    - 8-битная шкала серого,
    - 24 и 32 бита RGB.
  + параметр channels конструктора может иметь значение None, в этом
    случае количество и номера каналов определяются автоматически
+ добавлена функция get_supported_image(), создающая из указанного
  изображения совместимое с ImageGradGen

r5 =====================================================================
* переделан и исправлен конструктор класса GradSender: параметры теперь
  передаются как словарь **kwargs, аналогично конструкторам прочих
  классов модуля