@@ -1,3 +1,15 @@
+r11 ====================================================================
+- убрана функция grad_values_to_array() - функционал преобразования
+  значений "выхлопа" генераторов перенесён в метод
+  GradSender.__DMX_send_frame(), т.к. больше нигде не используется,
+  а разворачивание списка списков в линейный список вынесено в функцию
+  unwrap_lol()
++ в класс GradSender добавлен метод blackout(), "обнуляющий" все каналы
+  во всех устройствах указанной universe (может использоваться в
+  обработчиках ошибок, дабы в случае чего лампочки ток не жрали зря)
+* убран мусор из модуля dmxgrad
+* исправлен и дополнен пример использования - example.py
+
 r10 ====================================================================
 - исправлена ошибка в функции grad_values_to_array(), из-за которой
   функция могла возвращать list вместо array
